# skin-scan

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml  render.yaml  requirements.txt  scan_image.sh
src/app/: deps.py  main.py  schemas.py  utils_io.py
src/cli/: scan_image.py
src/ml/models/: .gitkeep
src/pipeline/: compose.py  face_mesh.py  preprocess.py  visualize.py
src/pipeline/maps/: blemishes.py  hydration.py  oiliness.py  pigment.py  pores.py  redness.py  texture.py
tests/: test_maps.py
web/: client.html  demo.js
